<resources>
    <string name="app_name">Tankverhalten</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_edit_vehicle">EditVehicle</string>

    <!-- Main Menu Strings -->
    <string name="fahrzeuguebersicht">Fahrzeugübersicht</string>
    <string name="gefahrene_strecken">gefahrene Strecken</string>
    <string name="tankvorgang">tankvorgang</string>
    <string name="statistik">statistik</string>
    <string name="streckenprognose">Streckenprognose</string>

    <!-- fahrzeuguebersicht_layout Strings -->
    <string name="verbrauch">Verbrauch / 100km</string>
    <string name="kilometerstand">Kilometerstand</string>
    <string name="tankstand">Tankstand</string>
    <string name="reichweite">Reichweite</string>
    <string name="co2_ausstoß">CO<sub><small>2</small></sub>-Ausstoß</string>
    <string name="licensePlate">Kennzeichen</string>
    <string name="inspection">Nächste TÜV Inspektion</string>
    <string name="permission">Nächste Inspektion</string>

    <!-- statistik layout Strings -->
    <string name="before">früher</string>
    <string name="later">später</string>
    <string name="week">Woche</string>
    <string name="month">Monat</string>
    <string name="year">Jahr</string>
    <string name="value">Wert</string>
    <string name="time">Zeit</string>

    <!-- Refueling Process Strings -->
    <string name="getankt">getankte Menge [l(kWh)]</string>
    <string name="preis">Preis [€]</string>
    <string name="getankt_hint">getankte Menge</string>
    <string name="preis_hint">bezahlter Preis</string>
    <string name="bild">Bild des Tankbelegs</string>
    <string name="bild_aufnehmen">Bild aufnehmen</string>

    <!--  Add vehicle header and hints  -->
    <string name="displayname">Anzeigename...</string>
    <string name="license_plate_header">Kennzeichen</string>
    <string name="license_plate_hint">Kennzeichen...</string>
    <string name="consumption_city_header">Herstellerangabe zum Verbrauch innerorts [l(kWh) / 100km]</string>
    <string name="consumption_city_hint">Verbrauch innerorts...</string>
    <string name="consumption_combined_header">Herstellerangabe zum Verbrauch kombiniert [l(kWh) / 100km]</string>
    <string name="consumption_combined_hint">Verbrauch kombiniert...</string>
    <string name="consumption_country_header">Herstellerangabe zum Verbrauch außerorts [l(kWh) / 100km]</string>
    <string name="consumption_country_hint">Verbrauch außerorts...</string>
    <string name="mileage_header">Kilometerstand [km]</string>
    <string name="mileage_hint">Kilometerstand...</string>
    <string name="fuelLevel_header">Tankstand [%]</string>
    <string name="fuelLevel_hint">Tankstand...</string>
    <string name="volume_header">Tankvolumen [l(kWh)]</string>
    <string name="volume_hint">Tankvolumen...</string>
    <string name="co2_header">Herstellerangabe zum CO2-Ausstoß [kg / 100km]</string>
    <string name="co2_hint">CO2-Ausstoß...</string>
    <string name="vehicleType_header">Fahrzeugart wählen</string>
    <string name="vehicleType_car">Auto</string>
    <string name="vehicleType_motorcycle">Motorrad</string>
    <string name="vehicleType_transporter">Transporter / LKW</string>
    <string name="permission_header">Nächster TÜV</string>
    <string name="inspection_header">Nächste Inspektion</string>
    <string name="date_hint">TT.MM.JJJJ</string>

    <string name="save_Text">Speichern</string>
    <string name="cancel_Text">Abbrechen</string>

    <!-- GarageActivity descriptions -->
    <string name="AddVehicle_Button_description">Add a new Vehicle</string>
    <string name="permission_txt">TÜV-Erinnerung</string>


    <!-- Streckenprognose  -->
    <string name="ride_length_stat">Streckenlänge [km]</string>
    <string name="ride_length_stat_descr">Streckenlänge...</string>
    <string name="ride_type_innercity">innerorts [%]</string>
    <string name="ride_type_outercity">außerorts [%]</string>
    <string name="ride_type_combined">kombiniert [%]</string>
    <string name="confirm_calculating">berechnen</string>
    <string name="used_gas">Kraftstoffverbrauch [l(kWh)]</string>
    <string name="used_gas_cost">Kraftstoffkosten [€]</string>
    <string name="number_refueling">Anzahl der nötigen Tankvorgänge</string>
    <string name="co2emissions">CO2_Ausstoß [kg]</string>


</resources>