<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Tankverhalten.NoActionBar"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar_refuel_id"
        android:background="@color/FHGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.MyTheme">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/fuel_textview"
        android:layout_width="203dp"
        android:layout_height="20dp"
        android:text="@string/getankt"
        android:textColor="@color/FHGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_refuel_id"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/price_textview"
        android:layout_width="203dp"
        android:layout_height="20dp"
        android:text="@string/preis"
        android:textColor="@color/FHGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuel_edittext"
        app:layout_constraintVertical_bias="0.029" />

    <EditText
        android:id="@+id/fuel_edittext"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/getankt_hint"
        android:inputType="number|numberDecimal"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuel_textview"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/price_edittext"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="392dp"
        android:ems="10"
        android:hint="@string/preis_hint"
        android:inputType="number|numberDecimal"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_textview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fuel_receipt_textview"
        android:layout_width="165dp"
        android:layout_height="20dp"
        android:text="@string/bild"
        android:textColor="@color/FHGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_edittext"
        app:layout_constraintVertical_bias="0.05" />


    <Button
        android:id="@+id/camera_button"
        android:layout_width="182dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:backgroundTint="#00B1AC"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/bild_aufnehmen"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:cornerRadius="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuel_receipt_textview"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="182dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_button"
        app:layout_constraintVertical_bias="0.071"
        android:contentDescription="@string/bild_aufnehmen"/>


</androidx.constraintlayout.widget.ConstraintLayout>