<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:elevation="2dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/show_averageConsumption"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/FU_height"
                        android:background="@color/FHGreen"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/text_averageConsumption"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/FU_height"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/verbrauch"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:elevation="2dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/show_mileAge"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/FU_height"
                        android:background="@color/FHGreen"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/text_mileAge"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/FU_height"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/kilometerstand"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:elevation="2dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/show_fuelLevel"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/FU_height"
                        android:background="@color/FHGreen"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/text_fuelLevel"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/FU_height"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/tankstand"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:elevation="2dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/show_remainingRange"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/FU_height"
                        android:background="@color/FHGreen"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/text_remainingRange"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/FU_height"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/reichweite"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:elevation="2dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/show_co2emissions"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/FU_height"
                        android:background="@color/FHGreen"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/text_co2emissions"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/FU_height"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/co2_ausstoß"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:elevation="2dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/show_licensePlate"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/FU_height"
                        android:background="@color/FHGreen"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/text_licensePlate"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/FU_height"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/licensePlate"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:elevation="2dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/show_nextPermission"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/FU_height"
                        android:background="@color/FHGreen"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/text_nextInspection"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/FU_height"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/inspection"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:elevation="2dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/show_nextInspection"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/FU_height"
                        android:background="@color/FHGreen"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_nextPermission"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/FU_height"
                        android:background="@color/white"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/permission"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>